--- a/src/app/scotches/view/prices-table/prices-table.template.html
+++ b/src/app/scotches/view/prices-table/prices-table.template.html
@@ -1,38 +1,84 @@
     <!-- Prices  -->
     <div id="prices" [ngClass]="'tab'" style="display: none">
-      <div>
-        <button [ngClass]="'button'" (click)="addPrice()"><i class="fa fa-plus"></i> Add</button>
-      </div>
-      <br>
-      <table>
-        <tr>
-          <th>Date</th>
-          <th>Location</th>
-          <th>Size</th>
-          <th [ngClass]="'currencyColumn'">Price</th>
-          <th [ngClass]="'currencyColumn'">Tax</th>
-          <th [ngClass]="'currencyColumn'">Shipping</th>
-          <th [ngClass]="'currencyColumn'">Total</th>
-          <th [ngClass]="'commentColumn'">Comment</th>
-          <th [ngClass]="'editButtomColumn'"></th>
-        </tr>
-        <tr *ngFor="let price of prices">
-          <td>{{price.dateAdded | utcDate | date:'MM/dd/yyyy'}}</td>
-          <td>{{price.location}}</td>
-          <td>{{price.size}}</td>
-          <td [ngClass]="'currencyColumn'">{{price.price | currency:USD:'symbol'}}</td>
-          <td [ngClass]="'currencyColumn'">{{price.tax | currency:USD:'symbol'}}</td>
-          <td [ngClass]="'currencyColumn'">{{price.shipping | currency:USD:'symbol'}}</td>
-          <td [ngClass]="'currencyColumn'">{{price.total | currency:USD:'symbol'}}</td>
-          <td [ngClass]="'commentColumn'">{{price.comment}}</td>
-          <td [ngClass]="'editButtomColumn'">
-            <button [ngClass]="'button'" (click)="editPrice(price)"><i class="fa fa-pencil"></i> Edit</button>
-            <button [ngClass]="'button'" (click)="confirmDeletePrice(price)"><i class="fa fa-times"></i> Delete</button>
-          </td>
-        </tr>
-      </table>
-    </div>
 
-
+<app-data-table 
+                dataSetName="prices" 
+                [dataset]="prices" 
+                pageSize="6" 
+                detailsButton="false" 
+                newButton="true"
+                editButton="true" 
+                deleteButton="true" 
+                filterButton="true"
+                (showDetails)="showDetails($event)" 
+                (newItem)="addPrice($event)"
+                (editItem)="editPrice($event)"
+                (deleteItem)="confirmDeletePrice($event)">
+          <app-column  
+                      fieldName="dateAdded" 
+                      header="Date" 
+                      sortable="true" 
+                      filterable="false" 
+                      dataType="date" 
+                      styleClass="dateColumn">
+          </app-column>
+          <app-column  
+                      fieldName="location" 
+                      header="Location" 
+                      sortable="true" 
+                      filterable="true" 
+                      dataType="text" 
+                      styleClass="textColumn">
+          </app-column>
+          <app-column  
+                      fieldName="size" 
+                      header="Size" 
+                      sortable="true" 
+                      filterable="true" 
+                      dataType="text" 
+                      styleClass="textColumn">
+          </app-column>
+          <app-column  
+                      fieldName="price" 
+                      header="Price" 
+                      sortable="true" 
+                      filterable="false" 
+                      dataType="currency" 
+                      styleClass="numericColumn">
+          </app-column>
+          <app-column  
+                      fieldName="tax" 
+                      header="Tax" 
+                      sortable="true" 
+                      filterable="false" 
+                      dataType="currency" 
+                      styleClass="numericColumn">
+          </app-column>
+          <app-column  
+                      fieldName="shipping" 
+                      header="Shipping" 
+                      sortable="true" 
+                      filterable="false" 
+                      dataType="currency" 
+                      styleClass="numericColumn">
+          </app-column>
+          <app-column  
+                      fieldName="total" 
+                      header="Total" 
+                      sortable="true" 
+                      filterable="false" 
+                      dataType="currency" 
+                      styleClass="numericColumn">
+          </app-column>
+          <app-column  
+                      fieldName="comment" 
+                      header="Comment" 
+                      sortable="false" 
+                      filterable="true" 
+                      dataType="text" 
+                      styleClass="textColumn">
+          </app-column>
+</app-data-table>
+      
 <app-edit-dialog [type]="'prices'"></app-edit-dialog>
 <app-confirm-dialog [type]="'prices'"></app-confirm-dialog>
