--- a/src/app/scotches/view/wishlists-table/wishlists-table.template.html
+++ b/src/app/scotches/view/wishlists-table/wishlists-table.template.html
@@ -1,24 +1,25 @@
     <div id="wishlists" [ngClass]="'tab'" style="display: none">
-      <!-- <div [ngClass]="'section-label'">Wishlists</div> -->
-      <div>
-        <button [ngClass]="'button'" (click)="addWishlist()"><i class="fa fa-plus"></i> Add</button>
-      </div>
-      <br>
-      <table>
-        <tr>
-          <th>Wishlist</th>
-          <th [ngClass]="'editButtomColumn'"></th>
-        </tr>
-        <tr *ngFor="let wishlist of wishlists">
-          <!-- <td><a (click)="goToWishlist(wishlist)">{{wishlist}}</a></td> -->
-          <td>{{wishlist}}</td>
-          <td [ngClass]="'editButtomColumn'">
-            <button [ngClass]="'button'" (click)="confirmDeleteWishlist(wishlist)"><i class="fa fa-times"></i> Delete</button>
-          </td>
-        </tr>
-      </table>
-    </div>
-
+  <app-data-table 
+                dataSetName="wishlists" 
+                [dataset]="wishlists" 
+                pageSize="6" 
+                detailsButton="false" 
+                newButton="true"
+                editButton="false" 
+                deleteButton="true" 
+                filterButton="true"
+                (newItem)="addWishlist($event)"
+                (editItem)="editWishlist($event)"
+                (deleteItem)="confirmDeleteWishlist($event)">
+          <app-column  
+                      fieldName="wishListName" 
+                      header="Wishlists" 
+                      sortable="true" 
+                      filterable="true" 
+                      dataType="text" 
+                      styleClass="textColumn">
+          </app-column>
+  </app-data-table>
 
 <app-edit-dialog [type]="'wishlists'"></app-edit-dialog>
 <app-confirm-dialog [type]="'wishlists'"></app-confirm-dialog>
