--- a/src/app/scotches/view/tastings-table/tastings-table.template.html
+++ b/src/app/scotches/view/tastings-table/tastings-table.template.html
@@ -14,7 +14,7 @@
        (editItem)="editTasting($event)"
        (deleteItem)="confirmDeleteTasting($event)">
   <app-column  
-              fieldName="dateAdded" 
+              fieldName="dateAddedPretty" 
               header="Date" 
               sortable="true" 
               filterable="false" 
