--- a/src/app/tasting/tasting-edit-form.template.html
+++ b/src/app/tasting/tasting-edit-form.template.html
@@ -1,6 +1,6 @@
 <div [ngClass]="'formRow'">
     <div><label for="dateAdded" [ngClass]="'formLabel'">Date:</label></div>
-    <div><input type="date" id="dateAdded" [(ngModel)]="tasting.dateAdded"></div>
+    <div><input type="date" id="dateAdded" [(ngModel)]="tasting.dateAddedPretty"></div>
 </div>
 <div [ngClass]="'formRow'">
     <div>
