--- a/src/app/scotches/view/wishlists-table/wishlists-table.template.html
+++ b/src/app/scotches/view/wishlists-table/wishlists-table.template.html
@@ -1,4 +1,4 @@
-    <div id="wishlists" [ngClass]="'tab'" style="display: none">
+<div id="wishlists" [ngClass]="'tab'" style="display: none">
   <app-data-table 
                 dataSetName="wishlists" 
                 [dataset]="wishlists" 
@@ -10,14 +10,17 @@
                 filterButton="true"
                 (newItem)="addWishlist($event)"
                 (editItem)="editWishlist($event)"
-                (deleteItem)="confirmDeleteWishlist($event)">
+                (deleteItem)="confirmDeleteWishlist($event)"
+                (doNavigate)="navigate($event)">
           <app-column  
                       fieldName="wishListName" 
                       header="Wishlists" 
                       sortable="true" 
                       filterable="true" 
                       dataType="text" 
-                      styleClass="textColumn">
+                      styleClass="textColumn"
+                      navLink="/wishlists"
+                      navId="wishListName">
           </app-column>
   </app-data-table>
 
